--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>fleksa</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link href="style.css" rel="stylesheet" type="text/css">
+        <script src="script.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -28,12 +29,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -56,12 +57,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -84,12 +85,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -112,12 +113,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -140,12 +141,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -168,12 +169,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
@@ -196,12 +197,12 @@
 				</div>
 				<div class="col-1 justify-content-center">
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-					  <label class="form-check-label" for="flexSwitchCheck"></label>
+					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
 					</div>
 				</div>
 			</div>
