--- a/index.html
+++ b/index.html
@@ -9,203 +9,7 @@
         <script src="script.js"></script>
 	</head>
 	<body>
-		<div class="container">
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center align-middle">Monday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Tuesday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Wednesday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Thursday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Friday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Saturday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
-			<div class="row border-bottom">
-				<div class="col-1">
-						<p class="text-center">Sunday</p>
-						<div></div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1">
-				</div>
-				<div class="col-1 justify-content-center">
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-					<div class="form-check form-switch text-center">
-					  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-					</div>
-				</div>
-			</div>
+		<div class="container" id="main-content">
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
