--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<div class="header">
 			<h1 class="text-center">DASHBOARD</h1>
 		</div>
-		<div class="container" id="main-content">
+		<div class="container">
+			<div class="row border border-dark bg-secondary text-light"><div class="col-2 text-center" >Days</div><div class="col text-center" >Shop Time</div><div class="col text-center" >Delivery Time</div><div class="col-1"></div><div class="col-1"></div><div class="col-1"></div></div>
+			<div id ="main-content"></div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
